# tessark

./: .gitignore  DEBUG.md  README.md  docker-compose.yml
.github/workflows/: README.md  docker-build-push.yml
app/backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  docker-compose.yml
app/backend/src/: main.rs
app/frontend/: Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/app/[locale]/: layout.tsx  page.tsx
app/frontend/app/[locale]/oci/: page.tsx
app/frontend/app/[locale]/pull/: page.tsx
app/frontend/app/[locale]/registry/: page.tsx
app/frontend/app/api/fetchIndex/: route.ts
app/frontend/app/api/pull/: route.ts
app/frontend/app/api/pullChart/: route.ts
app/frontend/app/i18n/: I18nProvider.tsx
app/frontend/app/pull/: page.tsx
app/frontend/app/ui/: Footer.tsx  HelmChartBrowser.tsx  HelmExplorer.tsx  Layout.tsx  Navigation.tsx  OciChartPuller.tsx  PullClientPage.tsx  RegistryExplorer.tsx
app/frontend/i18n/: config.ts
app/frontend/messages/: en.json  fr.json
charts/tessark/: Chart.yaml  README.md  values.yaml
charts/tessark/templates/: NOTES.txt  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-ingressroute.yaml  frontend-service.yaml
scripts/: start-dev.sh
