[package]
name = "helmer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
http = "1"
mime = "0.3"
tower = "0.5"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4"] }
tempfile = "3.10"
once_cell = "1.19"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

